--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
+    "md5": "^2.2.1",
     "mongodb": "^3.2.4",
-    "mongoose": "^5.5.7"
+    "mongoose": "^5.5.7",
+    "redis": "^2.8.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.0"
